--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       <div id="chatArea"></div>
     </div>
 
-    <script src="https://chatroom-app.vercel.app/socket.io/socket.io.js"></script>
+    <script src="https://learning-sockets.vercel.app/socket.io/socket.io.js"></script>
 
     <script>
       const socket = io();
