The files are modified

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       </form>
       <div id="chatArea"></div>
     </div>
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://learning-sockets.vercel.app/socket.io/socket.io.js"></script>
     <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
     <script>
       const socket = io();
